--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <main>
         <article class="box">
             <h1>Waqar Ali Siyal</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:codewithwaqar11@gmail.com">codewithwaqar11@gmail.com</a></div>
 
             <section class="box">
                 <h2>
@@ -23,9 +23,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/siraiwaqarali<handle>">Github</a></li>
+                    <li><a href="https://linkedin.com/in/waqar-ali-siyal-b8a414175">Linkedin</a></li>
+                    <li><a href="https://twitter.com/WaqarAliSiyal8">Twitter</a></li>
                 </ul>
             </section>
 
@@ -33,12 +33,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Mehran UET, Jamshoro
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 3.55</li>
+                        <li>Years: 4</li>
                     </ul>
                 </div>
             </section>
@@ -49,11 +49,12 @@
                     Skills
                 </h2>
                 <ul>
-                    <li>CSS</li>
-                    <li>HTML</li>
-                    <li>JavaScript</li>
+                    <li>Flutter</li>
+                    <li>Android</li>
+                    <li>Dart</li>
                     <li>Git</li>
-                    <li>Visual Studio Code</li>
+                    <li>Java</li>
+                    <li>Python</li>
                 </ul>
             </section>
         </article>
@@ -63,11 +64,21 @@
                     <i class="fa fa-briefcase" aria-hidden="true"></i>
                     Experience
                 </h2>
-                <h3>Microsoft Learn Student Ambassador</h3>
+                <h3>Fiverr</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Flutter Developer</li>
+                    <li>January 2021 - Present</li>
+                    <li>25+ Orders</li>
+                    <li>5.0 Seller Ratings</li>
                 </ul>
+                <h3>Upwork</h3>
+                <ul>
+                    <li>Flutter Developer</li>
+                    <li>April 2022 - Present</li>
+                    <li>22 Jobs</li>
+                    <li>5.0 Seller Ratings</li>
+                </ul>
+                <h3>Microsoft Learn Student Ambassador</h3>
             </section>
             <section class="box">
                 <h2>
@@ -75,13 +86,13 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>Oclits</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Flutter Developer Intern</li>
+                    <li>May 2021 - June 2021</li>
                 </ul>
             </section>
-            <section class="box">
+            <!-- <section class="box">
                 <h2>
                     <i class="fa fa-cubes" aria-hidden="true"></i>
                     Projects
@@ -93,7 +104,7 @@
                     <li>Cool technology used</li>
                     <li>Prize won</li>
                 </ul>
-            </section>
+            </section> -->
         </article>
 
     </main>
